--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
     "prod": "npm run build && npm run server:prod",
     "build": "vite build",
     "server": "ts-node ./server/index.ts",
-    "server:prod": "cross-env NODE_ENV=production ts-node ./server/index.ts"
+    "server:prod": "cross-env NODE_ENV=production ts-node ./server/index.ts",
+    "preview": "vite build && yarn server"
   },
   "dependencies": {
     "@types/compression": "^1.7.2",
