--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "typescript": "^4.9.4",
     "vite": "^4.0.3",
     "vite-plugin-ssr": "^0.4.71",
-    "vue": "^3.2.33"
+    "vue": "^3.2.33",
+    "vue-i18n": "9"
   },
   "type": "module"
 }
