--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "vite": "^4.0.3",
     "vite-plugin-ssr": "^0.4.71",
     "vue": "^3.2.33",
-    "vue-i18n": "9"
+    "vue-i18n": "9",
+    "vuex": "^4.0.2"
   },
   "type": "module"
 }
