--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@vue/server-renderer": "^3.2.33",
     "compression": "^1.7.4",
     "cross-env": "^7.0.3",
+    "cross-fetch": "^3.1.5",
     "express": "^4.18.1",
     "sirv": "^2.0.2",
     "ts-node": "^10.9.1",
@@ -26,5 +27,8 @@
     "vue-i18n": "9",
     "vuex": "^4.0.2"
   },
-  "type": "module"
+  "type": "module",
+  "devDependencies": {
+    "@types/node-fetch": "^2.6.2"
+  }
 }
