--- a/package.json
+++ b/package.json
@@ -8,16 +8,20 @@
     "preview": "vite build && yarn server"
   },
   "dependencies": {
+    "@apollo/client": "^3.7.5",
     "@types/compression": "^1.7.2",
     "@types/express": "^4.17.14",
     "@types/node": "^18.11.9",
     "@vitejs/plugin-vue": "^4.0.0",
+    "@vue/apollo-composable": "^4.0.0-beta.1",
     "@vue/compiler-sfc": "^3.2.33",
     "@vue/server-renderer": "^3.2.33",
     "compression": "^1.7.4",
     "cross-env": "^7.0.3",
     "cross-fetch": "^3.1.5",
     "express": "^4.18.1",
+    "graphql": "^16.6.0",
+    "graphql-tag": "^2.12.6",
     "sirv": "^2.0.2",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.4",
