Add scss and @ alias

--- a/package.json
+++ b/package.json
@@ -33,6 +33,10 @@
   },
   "type": "module",
   "devDependencies": {
-    "@types/node-fetch": "^2.6.2"
+    "@types/node-fetch": "^2.6.2",
+    "sass": "^1.57.1"
+  },
+  "imports": {
+    "@/*": "./*.ts"
   }
 }
