--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,10 @@
     "lib": ["DOM", "DOM.Iterable", "ESNext"],
     "types": ["vite/client"],
     "skipLibCheck": true,
-    "esModuleInterop": true
+    "esModuleInterop": true,
+    "paths": {
+      "@/*": ["./*"]
+    }
   },
   "ts-node": {
     "transpileOnly": true,
