--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "build": "vite build",
     "server": "ts-node ./server/index.ts",
     "server:prod": "cross-env NODE_ENV=production ts-node ./server/index.ts",
-    "preview": "vite build && yarn server"
+    "preview": "vite build && yarn server",
+    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --ignore-path .gitignore"
   },
   "dependencies": {
     "@apollo/client": "^3.7.5",
@@ -34,7 +35,16 @@
   "type": "module",
   "devDependencies": {
     "@types/node-fetch": "^2.6.2",
-    "sass": "^1.57.1"
+    "@typescript-eslint/eslint-plugin": "^5.49.0",
+    "@typescript-eslint/parser": "^5.49.0",
+    "@vue/eslint-config-typescript": "^11.0.2",
+    "eslint": "^8.33.0",
+    "eslint-config-prettier": "^8.6.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-vue": "^9.9.0",
+    "prettier": "^2.8.3",
+    "sass": "^1.57.1",
+    "vue-eslint-parser": "^9.1.0"
   },
   "imports": {
     "@/*": "./*.ts"
