--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "preview": "vite build && yarn server",
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --ignore-path .gitignore",
     "test": "vitest",
-    "coverage": "vitest run --coverage"
+    "coverage": "vitest run --coverage",
+    "type-check": "vue-tsc --noEmit --composite false"
   },
   "dependencies": {
     "@apollo/client": "^3.7.5",
@@ -49,7 +50,8 @@
     "prettier": "^2.8.3",
     "sass": "^1.57.1",
     "vitest": "^0.28.3",
-    "vue-eslint-parser": "^9.1.0"
+    "vue-eslint-parser": "^9.1.0",
+    "vue-tsc": "^1.0.24"
   },
   "imports": {
     "@/*": "./*.ts"
