--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --ignore-path .gitignore",
     "test": "vitest",
     "coverage": "vitest run --coverage",
-    "type-check": "vue-tsc --noEmit --composite false"
+    "type-check": "vue-tsc --noEmit --composite false",
+    "postinstall": "husky install"
   },
   "dependencies": {
     "@apollo/client": "^3.7.5",
@@ -46,12 +47,24 @@
     "eslint-config-prettier": "^8.6.0",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-vue": "^9.9.0",
+    "husky": "^8.0.0",
     "jsdom": "^21.1.0",
+    "lint-staged": "^13.1.0",
     "prettier": "^2.8.3",
     "sass": "^1.57.1",
     "vitest": "^0.28.3",
     "vue-eslint-parser": "^9.1.0",
     "vue-tsc": "^1.0.24"
+  },
+  "lint-staged": {
+    "*.{ts,js,vue}": [
+      "eslint"
+    ]
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
   },
   "imports": {
     "@/*": "./*.ts"
